[package]
name = "pystrings"
version = "0.1.0"
authors = ["Constantin <constantin.gierczak.galle@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "pystrings"
#crate-type = ["dylib"]
#
#[dependencies.cpython]
#git = "https://github.com/dgrunwald/rust-cpython"
#version = "0.5.1"
#
#[dependencies.integer-sqrt]
